# SmartPillBox_Openharmony

./: README.md
hardware/pz_hi3861/common/bsp/include/: bsp_beep.h  bsp_exti.h  bsp_key.h  bsp_oled.h  bsp_oled_yz.h  img.h  oledfont.h
hardware/pz_hi3861/common/bsp/src/: bsp_beep.c  bsp_exti.c  bsp_key.c  bsp_oled.c  bsp_time.c
hardware/pz_hi3861/demo/: BUILD.gn
hardware/pz_hi3861/demo/09_beep/: template.c
hardware/pz_hi3861/demo/11_key/: BUILD.gn  template.c
hardware/pz_hi3861/demo/20_oled/: BUILD.gn  template.c  template_UI.c  template_UI2.c  template_ball.c  template_i2c.c  template_scroll.c  template_tesst.c
hardware/pz_hi3861/demo/31_touch_key/: template.c
hardware/pz_hi3861/demo/41_light_sense/: BUILD.gn  template.c
hardware/pz_hi3861/demo/42_ps2/: template.c
hardware/pz_hi3861/demo/oled/: BUILD.gn  main.c
hardware/pz_hi3861/demo/oled/task/include/: adjust_task.h  beep_task.h  blue_task.h  camera.h  exit_task.h  hall_task.h  item.h  key_task.h  launcher.h  menu.h  oled_task.h  remind_task.h  selector.h  systime_task.h  task_define.h  timer_task.h
hardware/pz_hi3861/demo/oled/task/src/: adjust_task.c  beep_task.c  blue_task.c  camera.c  exit_task.c  hall_task.c  item.c  key_task.c  launcher.c  menu.c  oled_task copy.c  oled_task.c  remind_task.c  selector.c  systime_task.c  timer_task.c
software/: build-profile.json5
software/AppScope/: app.json5
software/AppScope/resources/base/element/: string.json
