# Copyright (c) 2024 www.prechin.cn
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License. 

static_library("oled") {
    sources = [
         "main.c",
        "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_led.c",
        "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_beep.c",
        # "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_relay.c",
         "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_key.c",
        # "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_dc_motor.c",
        # "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_step_motor.c",
        "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_exti.c",
        "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_time.c",
        # "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_pwm.c",
        # "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_uart.c",
        # "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_adc.c",
        # "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_ds18b20.c",
        # "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_ds18b20.c",
        "//vendor/pzkj/pz_hi3861/common/bsp/src/bsp_oled.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/beep_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/timer_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/exit_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/key_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/remind_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/adjust_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/oled_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/blue_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/systime_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/hall_task.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/menu.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/item.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/selector.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/camera.c",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/src/launcher.c",
        
        # "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/drivers/i2c/i2c.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//vendor/pzkj/pz_hi3861/common/bsp/include",
        "//vendor/pzkj/pz_hi3861/demo/oled/task/include",
        # "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/drivers/i2c",
        # "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/u-boot-v2019.07/u-boot-v2019.07/include",

    ]
}